; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_page_alloc.c_zone_watermark_ok.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_page_alloc.c_zone_watermark_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zone = type { i32 }

@NR_FREE_PAGES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zone_watermark_ok(%struct.zone* %0, i32 %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.zone*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.zone* %0, %struct.zone** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.zone*, %struct.zone** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i64, i64* %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32, i32* %10, align 4
  %16 = load %struct.zone*, %struct.zone** %6, align 8
  %17 = load i32, i32* @NR_FREE_PAGES, align 4
  %18 = call i32 @zone_page_state(%struct.zone* %16, i32 %17)
  %19 = call i32 @__zone_watermark_ok(%struct.zone* %11, i32 %12, i64 %13, i32 %14, i32 %15, i32 %18)
  ret i32 %19
}

declare dso_local i32 @__zone_watermark_ok(%struct.zone*, i32, i64, i32, i32, i32) #1

declare dso_local i32 @zone_page_state(%struct.zone*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
